--- a/css/demo1.css
+++ b/css/demo1.css
@@ -23,14 +23,14 @@
 	height: 20%; 
 	position: absolute;
 	top: -5%;
-	right: 11%;
+	right: 17%;
 }
 .container4{
 	width: 20%;
 	height: 20%; 
 	position: absolute;
-	top: 50%;
-	right: 3%;
+	top: 35%;
+	right: 10%;
 }
 .image{
 	width: 90%; 
@@ -71,7 +71,7 @@
 }
 
 .image5{
-	width: 100%;
+	width: 432px;
 	height: 585px; 
 	cursor: pointer;
 
